force-app/main/default/objects/Contact/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>Select the type that best describes this Organization record</description>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMMUNITY FDN</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>CORP FDN</fullName>
            </value>
            <value>
                <fullName>FAM FDN</fullName>
            </value>
            <value>
                <fullName>PRIVATE FDN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>