force-app/main/default/objects/Contact/fields/Personal_Gender_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Personal_Gender_Pronouns__c</fullName>
    <label>Personal Gender Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Pronouns</valueSetName>
    </valueSet>
</CustomField>