force-app/main/default/objects/Contact/fields/Potential_Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Potential_Bad_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Bad Address</label>
    <type>Checkbox</type>
</CustomField>