force-app/main/default/objects/Contact/fields/Primary_Affiliation_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Address__c</fullName>
    <formula>npsp__Primary_Affiliation__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation Address</label>
    <type>Text</type>
</CustomField>