force-app/main/default/objects/Contact/fields/Primary_Affiliation_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_City__c</fullName>
    <formula>npsp__Primary_Affiliation__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation City</label>
    <type>Text</type>
</CustomField>