force-app/main/default/objects/Contact/fields/Primary_Affiliation_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Flagged__c</fullName>
    <formula>npsp__Primary_Affiliation__r.Parent.Flagged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation Flagged?</label>
    <type>Checkbox</type>
</CustomField>