force-app/main/default/objects/Contact/fields/Primary_Affiliation_Parent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Parent__c</fullName>
    <formula>npsp__Primary_Affiliation__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation Parent</label>
    <type>Text</type>
</CustomField>