force-app/main/default/objects/Contact/fields/Primary_Affiliation_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_State__c</fullName>
    <formula>npsp__Primary_Affiliation__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation State</label>
    <type>Text</type>
</CustomField>