force-app/main/default/objects/Contact/fields/Primary_Affiliation_Zip__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Zip__c</fullName>
    <formula>npsp__Primary_Affiliation__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation Zip</label>
    <type>Text</type>
</CustomField>