force-app/main/default/objects/Contact/fields/Primary_Org_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Org_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Org Contact</label>
    <type>Checkbox</type>
</CustomField>