force-app/main/default/objects/Contact/fields/sf4twitter__Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Contact_Source__c</fullName>
    <label>Contact Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>