force-app/main/default/objects/Contact/fields/sf4twitter__followed__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__followed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the user is being followed by any account</description>
    <label>Followed</label>
    <type>Checkbox</type>
</CustomField>