force-app/main/default/objects/Contact/fields/sf4twitter__Influencer__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Influencer__c</fullName>
    <inlineHelpText>Is this Contact an Influencer (ie Reporter?)</inlineHelpText>
    <label>Influencer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>