force-app/main/default/objects/Contact/fields/sf4twitter__Influencer_Type__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Influencer_Type__c</fullName>
    <label>Influencer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sf4twitter__Influencer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reporter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>