force-app/main/default/objects/Contact/fields/sf4twitter__Klout_Number__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Klout_Number__c</fullName>
    <label>Klout Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>