force-app/main/default/objects/Contact/fields/sf4twitter__Research_this_Contact__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Research_this_Contact__c</fullName>
    <formula>HYPERLINK(&quot;http://www.linkedin.com/pub/dir/&quot; &amp;  FirstName  &amp; &quot;/&quot; &amp;  LastName, IMAGE(&quot;/resource/linkedin&quot;, &quot;Lookup Contact on LinkedIn&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research This Contact</label>
    <type>Text</type>
</CustomField>