force-app/main/default/objects/Contact/fields/sf4twitter__Twitter_Bio__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Bio__c</fullName>
    <label>Twitter Bio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>