force-app/main/default/objects/Contact/fields/sf4twitter__Twitter_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
    <label>Twitter Creation Date</label>
    <type>DateTime</type>
</CustomField>