force-app/main/default/objects/Contact/fields/sf4twitter__Twitter_Following_count__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Following_count__c</fullName>
    <label>Twitter Following Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>