force-app/main/default/objects/Contact/fields/sf4twitter__Twitter_Last_Tweet__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Last_Tweet__c</fullName>
    <label>Twitter Last Tweet</label>
    <type>DateTime</type>
</CustomField>