force-app/main/default/objects/Contact/fields/sf4twitter__Twitter_Location__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Location__c</fullName>
    <label>Twitter Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>