force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(User__c ==null , &apos;User Not Created&apos; , IF(User__c !=null &amp;&amp; User__r.IsActive, &apos;Active&apos;, &apos;Inactive&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>