force-app/main/default/objects/Contact/fields/Total_Gifts_Match__c.field-meta.xml
<CustomField>
    <fullName>Total_Gifts_Match__c</fullName>
    <formula>IF(Account.npe01__SYSTEM_AccountType__c
= &apos;One-to-One Individual&apos;,
IF(npo02__TotalOppAmount__c
= Account.npo02__TotalOppAmount__c,
True, False), False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gifts Match</label>
    <type>Checkbox</type>
</CustomField>