force-app/main/default/objects/Contact/fields/Unsubscribe_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Off Notifications</label>
    <type>Checkbox</type>
</CustomField>