force-app/main/default/objects/Contact/fields/User_Disabled_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Disabled_Date__c</fullName>
    <label>User Disabled Date</label>
    <type>Date</type>
</CustomField>