force-app/main/default/objects/Contact/fields/User_Enabled__c.field-meta.xml
<CustomField>
    <fullName>User_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Enabled</label>
    <type>Checkbox</type>
</CustomField>