force-app/main/default/objects/Contact/fields/User_License_Type__c.field-meta.xml
<CustomField>
    <fullName>User_License_Type__c</fullName>
    <formula>TEXT(User__r.Profile.UserType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User License Type</label>
    <type>Text</type>
</CustomField>