force-app/main/default/objects/Contact/fields/Vendor_Categories__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Categories__c</fullName>
    <label>Vendor Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Vendor</fullName>
            </value>
            <value>
                <fullName>Misc. / Other Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>