force-app/main/default/objects/Contact/fields/Volunteer_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the contact is a volunteer</description>
    <inlineHelpText>Is this contact a volunteer?  If so, select the box.</inlineHelpText>
    <label>Volunteer-deprecated</label>
    <type>Checkbox</type>
</CustomField>