force-app/main/default/objects/Contact/fields/Volunteer_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Frequency__c</fullName>
    <label>Volunteer Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Occasional Saturday</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>