force-app/main/default/objects/Contact/fields/Volunteer_Interest__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interest__c</fullName>
    <label>Volunteer Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committee Work</fullName>
            </value>
            <value>
                <fullName>Community Tool Drives</fullName>
            </value>
            <value>
                <fullName>Fundraising Events</fullName>
            </value>
            <value>
                <fullName>General Office/Administrative</fullName>
            </value>
            <value>
                <fullName>Tool Repair</fullName>
            </value>
            <value>
                <fullName>Warehouse Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>