force-app/main/default/objects/Contact/recordTypes/Donor_Contact.recordType-meta.xml
<RecordType>
    <fullName>Donor_Contact</fullName>
    <active>true</active>
    <description>Any individual donor, potential donor, or volunteer</description>
    <label>Donor Contact</label>
</RecordType>