force-app/main/default/objects/Contact/recordTypes/Member_Agency_Contact.recordType-meta.xml
<RecordType>
    <fullName>Member_Agency_Contact</fullName>
    <active>true</active>
    <description>Contact specific to a ToolBank Member Agency</description>
    <label>Member Agency Contact</label>
</RecordType>