force-app/main/default/objects/Contact/recordTypes/Staff_Member.recordType-meta.xml
<RecordType>
    <fullName>Staff_Member</fullName>
    <active>true</active>
    <description>A Toolbank or ToolBank Affiliate Staff Member</description>
    <label>Staff Member</label>
</RecordType>