force-app/main/default/objects/Contact/recordTypes/Vendor_Contact.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Contact</fullName>
    <active>true</active>
    <description>A Contact specific to ToolBank vendors</description>
    <label>Vendor Contact</label>
</RecordType>