force-app/main/default/objects/Contact/validationRules/Contact_Preferred_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Preferred_Email</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,&quot;&quot;),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
    <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
    <errorMessage>Please select a Preferred Email</errorMessage>
</ValidationRule>