force-app/main/default/objects/Contact/validationRules/Member_Agency_Email_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Agency_Email_Primary</fullName>
    <active>false</active>
    <description>Requires that a Member Agency record have an Email address and Primary Affiliation</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName  = &quot;Member_Agency_Contact&quot;,
 CreatedBy.ProfileId &lt;&gt; &quot;00e4R000001JBHh&quot;,
OR(
LEN( Email   )=0,
LEN(npsp__Primary_Affiliation__c )=0
)
)</errorConditionFormula>
    <errorMessage>Please provide an Email and a Primary Affiliation for this Contact.</errorMessage>
</ValidationRule>