force-app/main/default/objects/Contact/listViews/Active_Staff.listView-meta.xml
<ListView>
    <fullName>Active_Staff</fullName>
    <columns>FULL_NAME</columns>
    <columns>User__c</columns>
    <columns>User_License_Type__c</columns>
    <columns>Employee_Start_Date__c</columns>
    <columns>Employee_End_Date__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Staff_Member</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Active Staff</label>
    <sharedTo>
        <group>Admin_Add_On</group>
        <group>Admins</group>
    </sharedTo>
</ListView>