force-app/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliate__c</field>
        <operation>equals</operation>
        <value>USA</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <label>TBUSA Contacts with Emails</label>
    <sharedTo>
        <role>ChiefExecutiveOfficer</role>
        <role>Operations_Coordinator</role>
    </sharedTo>
</ListView>