force-app/main/default/objects/Contact/listViews/Bad_States.listView-meta.xml
<ListView>
    <fullName>Bad_States</fullName>
    <booleanFilter>(1 AND 3 AND 5) OR (2 AND 4 AND 6)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>notEqual</operation>
        <value>AL,AK,AZ,AR,CA,CO,CT,DE,DC,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS1_STATE</field>
        <operation>notEqual</operation>
        <value>AL,AK,AZ,AR,CA,CO,CT,DE,DC,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>notEqual</operation>
        <value>MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS1_STATE</field>
        <operation>notEqual</operation>
        <value>MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS1_STATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>Bad States</label>
    <sharedTo>
        <group>NPSP_Conversion_Group</group>
    </sharedTo>
</ListView>