force-app/main/default/objects/Contact/listViews/Contacts_Created_by_Member_Agency.listView-meta.xml
<ListView>
    <fullName>Contacts_Created_by_Member_Agency</fullName>
    <columns>FULL_NAME</columns>
    <columns>npsp__Primary_Affiliation__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>User_Enabled__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Executive_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Member_Agency_Contact</value>
    </filters>
    <filters>
        <field>Created_from_member_portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contacts Created by Member Agency</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>